--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.10",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2"
   },
   "devDependencies": {
